--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         ul{
             padding: 0;
             border: 10%;
+            overflow-y: auto;
         }
         input{
             padding: 0.6em 1.2em;
